[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messy_repo1"
version = "0.0.5"
description = "A basic Python package called messy_repo1"
readme = "README.md"
license = {file = 'LICENSE'}
authors = [
    { name = "Lloyd W Jones III", email = "lloydjonesx3@gmail.com" }
]
dependencies = ['pandas', 'numpy', 'matplotlib', 'pathlib']